# SC2-Fax-Bot

./: .gitignore  Cargo.toml  activate.sh  create_zip.sh
bot/: bot.py
src/: bot.rs  m_macro.rs  main.rs  map.rs  micro.rs  state.rs  strategy.rs  util.rs
tests/: map1.txt
