[package]
name = "SC2-Fax-Bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sc2 = { version = "^1.1.2", git = "https://github.com/ccapitalk/rust-sc2.git", features = ["wine_sc2"] }
# rust-sc2 = { version = "^1.1.2", path = "../rust-sc2", features = ["wine_sc2"] }
clap = "^2.33.2"
rand = "*"
float-ord = "^0.3.2"
ndarray = "^0.15.4"
num-traits = "*"
